[build-system]
requires = ["setuptools>=77.0.3", "setuptools-scm[toml]>=8.3"]
build-backend = "setuptools.build_meta"

[project]
name = "jump-consistent-hash"
description = "Implementation of the Jump Consistent Hash algorithm"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
keywords = ["jump", "consistent", "hash", "jumphash", "algorithm"]

dynamic = ["version"]

[[project.authors]]
name = "Peter Lithammer"
email = "peter.lithammer@gmail.com"

[project.urls]
Source = "https://github.com/lithammer/python-jump-consistent-hash"
Issues = "https://github.com/lithammer/python-jump-consistent-hash/issues"
Changelog = "https://github.com/lithammer/python-jump-consistent-hash/releases"
Documentation = "https://github.com/lithammer/python-jump-consistent-hash#readme"

[dependency-groups]
dev = [
  "mypy",
  "ruff",
  "pytest",
  "setuptools", # Required for `python setup.py build_ext`
]

[tool.setuptools]
ext-modules = [{ name = "_jump", sources = ["src/jump/jump.c"] }]

[tool.setuptools_scm]

[tool.cibuildwheel]
test-command = "pytest {package}/tests"
test-requires = "pytest"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
warn_unused_configs = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
order-by-type = true
