[metadata]
name = jump-consistent-hash
description = Implementation of the Jump Consistent Hash algorithm
long_description = file: README.rst
url = https://github.com/lithammer/python-jump-consistent-hash
author = Peter Lithammer
author_email = peter.lithammer@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = jump, consistent, hash, jumphash, algorithm
project_urls =
    Source=https://github.com/lithammer/python-jump-consistent-hash
    Issues=https://github.com/lithammer/python-jump-consistent-hash/issues
    Changelog=https://github.com/lithammer/python-jump-consistent-hash/releases
    Documentation=https://github.com/lithammer/python-jump-consistent-hash#readme

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
zip_safe = false

[options.packages.find]
where = src

[options.package_data]
jump =
    py.typed
    __init__.pyi

[flake8]
show_source = true
